--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Lêɠêɳ̃dẞο†",
+  "name": "AANDAVAR BOT",
   "description": "LegendBot is one of the best userbot on telegram based on telethon & python",
-  "logo": "https://telegra.ph/file/ac9bd7bcdac984dd407b2.jpg",
+  "logo": "https://telegra.ph//file/8e117fb1ccce517c850ee.jpg",
   "keywords": [
     "plugin",
     "legendbot",
